# owl

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
.github/actions/build-libcec-unix/: action.yml  build.sh
.github/actions/build-libcec-windows/: action.yml
.github/actions/test-owl-unix/: action.yml
.github/actions/test-owl-windows/: action.yml
.github/workflows/: ci.yml  libcec.yml  owl.yml
cec/: Cargo.toml  README.md
cec/src/: callback.rs  convert.rs  lib.rs  types.rs
cec_bindgen/: Cargo.toml
cec_bindgen/src/: main.rs
cec_bootstrap/: Cargo.toml
cec_bootstrap/src/: lib.rs
cec_sys/: Cargo.toml  README.md  build.rs
cec_sys/src/: lib.rs
cec_sys/src/bindings/: aarch64-apple-darwin.rs  x86_64-pc-windows-msvc.rs
libcec/: Cargo.toml
libcec-sys/: Cargo.toml  build.rs
libcec-sys/src/: lib.rs
owl/: Cargo.toml
owl/src/: cec.rs  job.rs  lib.rs  main.rs
owl/src/os/: mod.rs  windows.rs
owl/src/os/linux/: mod.rs
owl/src/os/windows/: handlers.rs  internal.rs  key.rs  mod.rs  power.rs  window.rs
src/: cec.rs  job.rs  lib.rs  main.rs  win32.rs
src/os/: mod.rs  windows.rs
src/os/windows/: event_loop.rs  mod.rs  raw_event.rs  task.rs  window.rs
