[workspace]
resolver = "2"
members = ["owl", "cec_sys", "cec"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
debug = true

[workspace.lints.clippy]
missing_errors_doc = "allow"
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
