[workspace]
resolver = "2"
members = ["owl", "cec_sys", "cec_bindgen", "cec", "cec_bootstrap"]

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
debug = true

[workspace.lints.clippy]
missing_errors_doc = "allow"
option_if_let_else = "allow"
unwrap_in_result = "warn"
unwrap_used = "warn"
pedantic = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
