[package]
name = "cec"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[dependencies]
arrayvec = "0.7"
log = "0.4"
derive_builder = "0.20"
num-traits = "0.2"
thiserror = "1"
derive_more = { version = "1", features = ["full"] }
enum-repr = "0.2"
cec_sys = { path = "../cec_sys" }

[lints]
workspace = true
