[package]
name = "libcec-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.65"
color-eyre = "0.6"
convert_case = "0.6"
itertools = "0.12"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
zip-extract = "0.1"
